--- a/report/ParallelGamesReport.tex
+++ b/report/ParallelGamesReport.tex
@@ -73,7 +73,7 @@ Numerical Analisis Proyect}
 
 \section{Introduction}
 
-Technology has become every time more and more necessary in peoples lives. Nowadays it has a lot of uses, one of them being the computing application in the mathematics world. Numerical methods  are a tool to help to solve numerical
+Technology has become every time more and more necessary in people's lives. Nowadays it has a lot of uses, one of them being the computing application in the mathematics world. Numerical methods  are a tool to help to solve numerical
 problems. Sometimes, this problems are really complex and hard to solve by
 the human. For this reason, we can say that exists a relation between numerical
 methods  and the computing world because the computers can process a lot of data
@@ -169,23 +169,6 @@ In this section, we are going to show how to parallelize the gaussian eliminatio
 \subsubsubsection{Parallel}
 
 \begin{lstlisting}[language=C]
-void readMatrix(){
-  ifstream f("matrix.txt");
-  f >> n;
-
-  m= new double *[n];
-  for (i = 0; i < n; i++) {
-        m[i] = new double[n+1];
-  }
-
-  X= new double [n];
-
-  for (i = 0; i < n; i++){
-    for (j = 0; j <= n; j++){
-      f >> m[i][j];
-    }
-  }
-}
 
 void gaussElimination(){
   for ( k= 0; k < n-1; ++k)
@@ -203,55 +186,11 @@ void gaussElimination(){
   }
 }
 
-void regressiveSubstitution(){
-  for(int i=n-1; i>=0; --i){
-    double sum = 0;
-    for(int p=i; p<n; ++p){
-      sum += m[i][p]*X[p];
-    }
-    X[i]=(m[i][n]-sum)/m[i][i];
-  }  
-}
-
-void printResults(){
-  std::cout<<"The value of the unknowns is : ";
-  for(i=1;i<=n;i++){
-    std::cout<<"\nX"<<i<<" = "<<X[i-1]<<"\n";
-  }
-}
-
-int main(){
-readMatrix();
-time_t start = time(0);
-gaussElimination();
-time_t end = time(0);
-double tim = difftime(end, start) * 1000.0;
-regressiveSubstitution();
-printResults();
-cout << "el tiempo que se tardo en encontrar la solucion fue: " << tim<<endl;
-}
 \end{lstlisting}
 
 \subsubsubsection{Serial}
 
 \begin{lstlisting}[language=C]
- void readMatrix(){
-  ifstream f("matrix.txt");
-  f >> n;
-
-  m= new double *[n];
-  for (i = 0; i < n; i++) {
-        m[i] = new double[n+1];
-  }
-
-  X= new double [n];
-
-  for (i = 0; i < n; i++){
-    for (j = 0; j <= n; j++){
-      f >> m[i][j];
-    }
-  }
-}
 
 void gaussElimination(){
   for ( k= 0; k < n-1; ++k)
@@ -267,41 +206,10 @@ void gaussElimination(){
     }
   }
 }
-
-void regressiveSubstitution(){
-  for(int i=n-1; i>=0; --i){
-    double sum = 0;
-    for(int p=i; p<n; ++p){
-      sum += m[i][p]*X[p];
-    }
-    X[i]=(m[i][n]-sum)/m[i][i];
-  }  
-}
-
-void printResults(){
-  std::cout<<"The value of the unknowns is : ";
-  for(i=1;i<=n;i++){
-    std::cout<<"\nX"<<i<<" = "<<X[i-1]<<"\n";
-  }
-}
-int main(){
-
-readMatrix();
-
-time_t start = time(0);
-gaussElimination();
-time_t end = time(0);
-double tim = difftime(end, start) * 1000.0;
-regressiveSubstitution();
-printResults();
-
-cout << "el tiempo que se tardo en encontrar la solucion fue: " << tim<<endl;
-return 1;
-}
 \end{lstlisting}
 
 \subsubsection{Analysis of the method:}
-\includegraphics[width=\linewidth]{./images/gauss.png}\\
+\includegraphics[width=\linewidth]{./images/gauss.PNG}\\
 
 \subsection{LU Factorization}
 
@@ -322,32 +230,7 @@ be accomplished by the LU decomposition, which in effect records the steps of Ga
 \subsubsubsection{Code}
 
 \begin{lstlisting}[language=C]
-void readMatrix( int size,string origin){
-	B = new double[size];
-    U = new double *[size];
-    
-    for (int i = 0; i < size; ++i){
-        U[i] = new double [size];
-    }
 
-    L = new double*[size];
-    
-    for (int i = 0; i < size; ++i){
-		L[i] = new double[size];
-    }
-
-    ifstream read;
-    read.open(origin.c_str());
-    read >> B[0];
-    for (int i = 0; i < size; ++i){
-        for (int j = 0; j < size; ++j){
-            read >> U[i][j];
-        }
-        read >> B[i];
-    }
-    
-    read.close();
-}
 
 void gaussianElimination(int n){
 	
@@ -364,63 +247,12 @@ void gaussianElimination(int n){
 	}
 }
 
-
-void progressiveC(int n){
-	Z = new double[n];
-	for(int i=0; i<n; i++){
-		double sum = 0;
-		for(int p=0; p<i; ++p){
-			sum += L[i][p]*Z[p];
-		}
-		Z[i]=(B[i]-sum)/L[i][i];
-	}
-}
-
-void regressiveC(int n){
-	X = new double[n];
-	for(int i=n-1; i>=0; --i){
-		double sum = 0;
-		for(int p=i+1; p<n; ++p){
-			sum += U[i][p]*X[p];
-		}
-		X[i]=(Z[i]-sum)/U[i][i];
-	}
-}
-
-void printSolution(string solutionFile, int size){
-    ofstream write;
-    write.open(solutionFile.c_str(),ios::trunc);
-    for (int i = 0; i <size; ++i){
-        write << X[i] << endl;
-    }
-    write.close();
-}
-
-int main(){
-	string originalFile,readingName,writingName,solutionFile;
-    long long matrixSize;
-    clock_t start, end;
-    originalFile="matrix10.txt";
-    solutionFile="solution.txt";
-    ifstream f("matrix10.txt");
-    f >> matrixSize; 
-    
-    readMatrix(matrixSize,originalFile);
-    start = clock(); 
-    gaussianElimination(matrixSize);
-    progressiveC(matrixSize);
-    regressiveC(matrixSize);
-    end = clock(); 
-    printf("The time was: %.30g\n", (double)( (end - start) / 1000.0)); 
-    printSolution(solutionFile, matrixSize);
-	return 0;
-}
 \end{lstlisting}
 
 
 \subsubsubsection{Analysis of the method:}
 
-\includegraphics[width=\linewidth]{./images/lu.png}\\
+\includegraphics[width=\linewidth]{./images/lu.PNG}\\
 In this graphic we can see the result and the comparison between serial form and parallel form.
 
 
@@ -438,52 +270,6 @@ for symmetric matrices. The computational load can be halved using Cholesky deco
 \subsubsubsection{Code}
 
 \begin{lstlisting}[language=C]
-void fillMatrix( int size){
-    for (int i = 0; i <size; ++i){
-        for (int j =0 ; j<size; ++j){
-            L[i][j] =0;
-        }
-    }
-    for (int i = 0; i <size; ++i){
-        for (int j =0 ; j<size; ++j){
-            U[i][j]=0 ;
-        }
-    }
-}
-
-
-void readMatrix( int size,string origin){
-    B = new double[size];
-    U = new double *[size];
-    A= new double *[size];
-    for (int i = 0; i < size; ++i){
-        U[i] = new double [size];
-    }
-
-    for (int i = 0; i < size; ++i){
-        A[i] = new double [size];
-    }
-
-    L = new double*[size];
-    
-    for (int i = 0; i < size; ++i){
-        L[i] = new double[size];
-    }
-
-    fillMatrix(size);
-    ifstream read;
-    read.open(origin.c_str());
-    read >> B[0];
-    for (int i = 0; i < size; ++i){
-        for (int j = 0; j < size; ++j){
-            read >> A[i][j];
-        }
-        read >> B[i];
-    }
-    
-    read.close();
-}
-
 
 void cholesky(int n){
     double suma1,suma2,suma3;
@@ -518,65 +304,12 @@ void cholesky(int n){
     }
 }
 
-void progressiveC(int n){
-	Z = new double[n];
-	for(int i=0; i<n; i++){
-		double sum = 0;
-		for(int p=0; p<i; ++p){
-			sum += L[i][p]*Z[p];
-		}
-		Z[i]=(B[i]-sum)/L[i][i];
-	}
-}
-
-void regressiveC(int n){
-	X = new double[n];
-	for(int i=n-1; i>=0; --i){
-		double sum = 0;
-		for(int p=i+1; p<n; ++p){
-			sum += U[i][p]*X[p];
-		}
-		X[i]=(Z[i]-sum)/U[i][i];
-	}
-}
-
-void printSolution(string solutionFile, int size){
-    ofstream write;
-    write.open(solutionFile.c_str(),ios::trunc);
-    for (int i = 0; i <size; ++i){
-        write << X[i] << endl;
-    }
-    
-
-    write.close();
-}
-
-int main(){
-	string originalFile,readingName,writingName,solutionFile;
-    long long matrixSize;
-    clock_t start, end;
-    originalFile="./matrices/matrix10000.txt";
-    solutionFile="solutionCholesky.txt";
-    ifstream f("./matrices/matrix10000.txt");
-    f >> matrixSize; 
-
-
-    readMatrix(matrixSize,originalFile);
-    start = clock();
-    cholesky(matrixSize);
-    progressiveC(matrixSize);
-    regressiveC(matrixSize);
-    end = clock(); 
-    printf("The time was: %.30g\n", (double)( (end - start) / 1000.0)); 
-    printSolution(solutionFile, matrixSize);
-	return 0;
-}
 \end{lstlisting}
 
 
 \subsubsubsection{Analysis of the method:}
 
-\includegraphics[width=\linewidth]{./images/cholesky.png}\\
+\includegraphics[width=\linewidth]{./images/cholesky.PNG}\\
 In this graphic we can see the result and the comparison between serial form and parallel form.
 
 \newpage
@@ -600,49 +333,6 @@ being L a lower triangular matrix, D a diagonal matrix and U a normalised upper 
 \subsubsubsection{Code}
 
 \begin{lstlisting}[language=C]
-void fillMatrix( int size){
-    for (int i = 0; i <size; ++i){
-        for (int j =0 ; j<size; ++j){
-            L[i][j] =0;
-        }
-    }
-    for (int i = 0; i <size; ++i){
-        for (int j =0 ; j<size; ++j){
-            U[i][j]=0 ;
-        }
-    }
-}
-
-
-void readMatrix( int size,string origin){
-	B = new double[size];
-    U = new double *[size];
-    A= new double *[size];
-    for (int i = 0; i < size; ++i){
-        U[i] = new double [size];
-    }
-
-    for (int i = 0; i < size; ++i){
-        A[i] = new double [size];
-    }
-    L = new double*[size];
-    
-    for (int i = 0; i < size; ++i){
-		L[i] = new double[size];
-    }
-    fillMatrix(size);
-    ifstream read;
-    read.open(origin.c_str());
-    read >> B[0];
-    for (int i = 0; i < size; ++i){
-        for (int j = 0; j < size; ++j){
-            read >> A[i][j];
-        }
-        read >> B[i];
-    }
-    
-    read.close();
-}
 
 void crout(int n){
     double suma1,suma2,suma3;
@@ -675,63 +365,11 @@ void crout(int n){
     }
 }
 
-void progressiveC(int n){
-	Z = new double[n];
-	for(int i=0; i<n; i++){
-		double sum = 0;
-		for(int p=0; p<i; ++p){
-			sum += L[i][p]*Z[p];
-		}
-		Z[i]=(B[i]-sum)/L[i][i];
-	}
-}
-
-void regressiveC(int n){
-	X = new double[n];
-	for(int i=n-1; i>=0; --i){
-		double sum = 0;
-		for(int p=i+1; p<n; ++p){
-			sum += U[i][p]*X[p];
-		}
-		X[i]=(Z[i]-sum)/U[i][i];
-	}
-}
-
-void printSolution(string solutionFile, int size){
-    ofstream write;
-    write.open(solutionFile.c_str(),ios::trunc);
-    for (int i = 0; i <size; ++i){
-        write << X[i] << endl;
-    }
-
-    write.close();
-}
-
-int main(){
-	string originalFile,readingName,writingName,solutionFile;
-    long long matrixSize;
-
-    clock_t start, end; 
-
-    originalFile="./matrices/matrix1000.txt";
-    solutionFile="solutionLuCrout.txt";
-    ifstream f("./matrices/matrix1000.txt");
-    f >> matrixSize;  
-    readMatrix(matrixSize,originalFile);
-    start = clock();
-    crout(matrixSize);
-    progressiveC(matrixSize);
-    regressiveC(matrixSize);
-    end = clock(); 
-    printf("The time was: %.30g\n", (double)( (end - start) / 1000.0)); 
-    printSolution(solutionFile, matrixSize);
-	return 0;
-}
 \end{lstlisting}
 
 \subsubsubsection{Analysis of the method:}
 
-\includegraphics[width=\linewidth]{./images/crout.png}\\
+\includegraphics[width=\linewidth]{./images/crout.PNG}\\
 In this graphic we can see the result and the comparison between serial form and parallel form.
 
 \newpage
@@ -747,50 +385,6 @@ Recall that for a general nxn matrix A, we assume that an LU decomposition exist
 \subsubsubsection{Code}
 
 \begin{lstlisting}[language=C]
-void fillMatrix( int size){
-    for (int i = 0; i <size; ++i){
-        for (int j =0 ; j<size; ++j){
-            L[i][j] =0;
-        }
-    }
-    for (int i = 0; i <size; ++i){
-        for (int j =0 ; j<size; ++j){
-            U[i][j]=0 ;
-        }
-    }
-}
-
-
-void readMatrix( int size,string origin){
-	B = new double[size];
-    U = new double *[size];
-    A= new double *[size];
-    for (int i = 0; i < size; ++i){
-        U[i] = new double [size];
-    }
-
-    for (int i = 0; i < size; ++i){
-        A[i] = new double [size];
-    }
-    L = new double*[size];
-    
-    for (int i = 0; i < size; ++i){
-		L[i] = new double[size];
-    }
-
-    fillMatrix(size);
-    ifstream read;
-    read.open(origin.c_str());
-    read >> B[0];
-    for (int i = 0; i < size; ++i){
-        for (int j = 0; j < size; ++j){
-            read >> A[i][j];
-        }
-        read >> B[i];
-    }
-    
-    read.close();
-}
 
 void doolittle (int n){
     double suma1,suma2,suma3;
@@ -823,57 +417,6 @@ void doolittle (int n){
     }
 }
 
-void progressiveC(int n){
-	Z = new double[n];
-	for(int i=0; i<n; i++){
-		double sum = 0;
-		for(int p=0; p<i; ++p){
-			sum += L[i][p]*Z[p];
-		}
-		Z[i]=(B[i]-sum)/L[i][i];
-	}
-}
-
-void regressiveC(int n){
-	X = new int[n];
-	for(int i=n-1; i>=0; --i){
-		double sum = 0;
-		for(int p=i+1; p<n; ++p){
-			sum += U[i][p]*X[p];
-		}
-		X[i]=(Z[i]-sum)/U[i][i];
-	}
-}
-
-void printSolution(string solutionFile, int size){
-    ofstream write;
-    write.open(solutionFile.c_str(),ios::trunc);
-    for (int i = 0; i <size; ++i){
-        write << X[i] << endl;
-    }
-
-    write.close();
-}
-
-int main(){
-	string originalFile,readingName,writingName,solutionFile;
-    long long matrixSize;
-    clock_t start, end;
-    originalFile="./matrices/matrix1000.txt";
-    solutionFile="solutionLuDoolittle.txt";
-    ifstream f("./matrices/matrix1000.txt");
-    f >> matrixSize; 
-    readMatrix(matrixSize,originalFile);
-    start = clock();
-    doolittle(matrixSize);
-    progressiveC(matrixSize);
-    regressiveC(matrixSize);
-    end = clock(); 
-    printf("The time was: %.30g\n", (double)( (end - start) / 1000.0)); 
-   
-    printSolution(solutionFile, matrixSize);
-	return 0;
-}
 \end{lstlisting}
 
 
@@ -881,7 +424,7 @@ int main(){
 
 \subsubsubsection{Analysis of the method:}
 
-\includegraphics[width=\linewidth]{./images/dolittle.png}\\
+\includegraphics[width=\linewidth]{./images/dolittle.PNG}\\
 In this graphic we can see the result and the comparison between serial form and parallel form.
 
 \newpage
@@ -925,23 +468,6 @@ operations in parallel (sum and multiplication), those are described above.
 \subsubsection{Code}
 
 \begin{lstlisting}[language=C]
-int initializeMatrix(string origin){
-    ifstream read;
-    read.open(origin.c_str());
-    int size = 0;
-    read >> size;
-    matrix = new double *[size];
-    for (int i = 0; i < size; ++i){
-        matrix[i] = new double [size+1];
-    }
-
-    for (int i = 0; i < size; ++i){
-        for (int j = 0; j < size + 1; ++j){
-            read >> matrix[i][j];
-        }
-    }
-    return size;
-}
 
 
 double newJacobi(int matrixSize){
@@ -984,46 +510,6 @@ bool jacobi(long long matrixSize, double tol, long long niter){
 }
 
 
-void writeSolution(string outputFile){
-    ofstream write;
-    write.open(outputFile.c_str(),ios::trunc);
-    for (int i = 0; i < xValues.size();++i){
-        write << xValues[i] << endl;
-    }
-    write.close();
-}
-
-int main(){
-    std::ios::sync_with_stdio(false);
-    string matrixInputFile, outputFile;
-    long long matrixSize, maxIterations;
-    clock_t start, end;
-    double tolerance;
-    bool success;
-
-    matrixInputFile = "./matrices/matrix1000.txt";
-    outputFile = "solution.txt";
-
-    matrixSize = initializeMatrix(matrixInputFile);
-
-    xValues.assign(matrixSize, 0);
-    xNewValues.assign(matrixSize, 0);
-
-
-    tolerance=0.000001;
-    maxIterations=10000;   
-    start = clock(); 
-    success = jacobi(matrixSize, tolerance, maxIterations);
-    end = clock(); 
-    printf("The time was: %.30g\n", (double)( (end - start) / 1000.0)); 
-    
-    if (success)
-        writeSolution(outputFile);
-    else
-        cout << "could not reach the solutions in "
-         << maxIterations << " iterations" << endl;
-        writeSolution(outputFile);
-    return 0;
 }
 
 
@@ -1034,7 +520,7 @@ int main(){
 
 In order to analyse the speed of the method we did some tests with different matrix. So, in the following graphic we can see the performance of jacobi in parallel.
 
-\includegraphics[width=\linewidth]{./images/jacobi.png}\\
+\includegraphics[width=\linewidth]{./images/jacobi.PNG}\\
 
 We can observe that the method increase too much its time of execution when we augment the size of the matrix. Later, we are going to compare this one with another methods, analysing their caracteristics.
 
@@ -1081,54 +567,6 @@ bool gaussS(long long mSize, double tol, long long niter){
     if (disp <= tol)
         return true;
     return false;
-}
-
-void writeSolution(string solutionFile){
-    ofstream write;
-    write.open(solutionFile.c_str(),ios::trunc);
-    for (int i = 0; i < independents.size();++i){
-        write << independents[i] << endl;
-    }
-    write.close();
-}
-
-int main(){
-    std::ios::sync_with_stdio(false);
-    string originalFile,readingName,writingName, solutionFile;
-    long long mSize, iterations;
-    clock_t start, end;
-    double tolerance;
-    bool res;
-    std::ifstream f("matrix5000.txt");
-      f >> mSize;
-      matrix = new double *[mSize];
-      for (int i = 0; i < mSize; ++i){
-          matrix[i] = new double [mSize+1];
-      }
-
-      for (int i = 0; i < mSize; ++i){
-          for (int j = 0; j < mSize + 1; ++j){
-              f >> matrix[i][j];
-          }
-      }
- 
-    tolerance=0.000001;
-    iterations=10000;   
-    start = clock(); 
-   
-    res = gaussS(mSize, tolerance, iterations);
-
-    end = clock(); 
-    printf("The time was: %.30g\n", (double)( (end - start) / 1000.0)); 
-    
-    if (res)
-        writeSolution(solutionFile);
-    else
-        cout << "could not reach the solutions in " 
-        << iterations << " iterations" << endl;
-    writeSolution(solutionFile);
-    
-    return 0;
 }
 
 \end{lstlisting}
@@ -1378,56 +816,56 @@ This method is another option for working with jacobi and big dimension matrices
 \begin{program}
 \end{program}
 
-\begin{algorithm}[H]
-    Read tol, niter, x$_0$, file, n, threads \\
-    Set num threads = threads\\
-    count = 0\\
-    error = tol + 1 \\
-    \For{(i = 0; i $<$ n; i++) }{
+\begin{lstlisting}[language=C]
+    Read tol, niter, x$_0$, file, n, threads
+    Set num threads = threads
+    count = 0
+    error = tol + 1 
+    for(i = 0; i $<$ n; i++){
        x$_1$[i] = 0
     }
-    \While{error $ > $ tol and count $ < $ niter}{
-      file.restart() //restarts the file to read again\\
+    while()error $ > $ tol and count $ < $ niter){
+      file.restart() //restarts the file to read again
 
-      \#pragma omp parallel for private() shared (file, count) \\
-      \For{(cont=0; cont $<$ n; cont++)}{
-        line = file.getline()\\
-        values[n]\\
-        \For{(i=0; i $<$ n; i++)}{
-          values[i] = line[i]\\
+      #pragma omp parallel for private() shared (file, count) 
+      for(cont=0; cont $<$ n; cont++){
+        line = file.getline()
+        values[n]
+        for(i=0; i $<$ n; i++){
+          values[i] = line[i]
         }
-        sum = line[n-1]\\
-        \For{(i=0; i $<$ n; i++)}{
-          \If{(i != cont)}{
-            sum -= values[i] * x$_0$[i]\\
+        sum = line[n-1]
+        for(i=0; i $<$ n; i++){
+          if(i != cont){
+            sum -= values[i] * x$_0$[i]
           }
         }
-        sum /= values[cont]\\
-        x$_1$[cont] = sum\\
+        sum /= values[cont]
+        x$_1$[cont] = sum
       }
-      error = abs(x$_1$[0] - x$_1$[0])\\
-      \For{(i = 1; i $<$ n; i++)}{
-        temp = abs(x$_1$[i] - x$_0$[i])\\
-        \If{(temp $>$ error)}{
-          error = temp\\
+      error = abs(x$_1$[0] - x$_1$[0])
+      for(i = 1; i $<$ n; i++){
+        temp = abs(x$_1$[i] - x$_0$[i])
+        if(temp $>$ error){
+          error = temp
         }
       }
       
-      \For{(i = 0; i $<$ n; i++)}{
-        x$_0$[i] = x$_1$[i]\\
+      for(i = 0; i $<$ n; i++){
+        x$_0$[i] = x$_1$[i]
       }
-      count++\\
+      count++
     }
-    file.close()\\
-    \eIf{(error $<=$ tol)}{
-      print "valid solution"\\
-    }{
-      print "failed with: " + niter + " iterations"\\
+    file.close()
+    }else if(error $<=$ tol){
+      print "valid solution"
     }
-    \For{(i=0; i $<$ n; i++)}{
-      print "x$_i$: " + x$_1$[i]\\
+      print "failed with: " + niter + " iterations"
     }
-\end{algorithm}
+    for(i=0; i $<$ n; i++){
+      print "x$_i$: " + x$_1$[i]
+    }
+\end{lstlisting}
 
 pictures of the execution will be upload later.
 
